fix: make scrollbar contract on macOS

--- a/src/commons.module.css
+++ b/src/commons.module.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  background-color: #000;
   color: var(--bookmark-text-color);
   font-family: var(--font-family-sans-serif);
   font-size: var(--text-size-regular);
